Bug 1173664: product information no longer wraps

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -294,6 +294,7 @@ input[type="number"] {
 
 #product-info, #component-info {
     color: #484;
+    white-space: normal;
 }
 
 #product-latch, #component-latch {
